--- a/A-M.org
+++ b/A-M.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2015-07-12>
+#+DATE: Time-stamp: <2015-07-13>
 #+bind: org-html-preamble-format (("en" "%d"))
 #+OPTIONS: ':nil *:t -:t ::t <:t H:3 \n:nil ^:{} arch:headline
 #+OPTIONS: author:t c:nil creator:comment d:(not "LOGBOOK") date:t
@@ -33,18 +33,18 @@ Customisations for GNU-Linux and Windows systems.
 The customisations are written in `Emacs-lisp'.  The comment sign in
 this language is ~;~ (one semi-colon `;').
 
-* Conventions used in /a-m.el/
-Textual hints in /a-m.el/ are indicated with DOUBLE semi-colons ~;;~,
+* Conventions used in /A-M.el/
+Textual hints in /A-M.el/ are indicated with DOUBLE semi-colons ~;;~,
 please uncomment the code lines with a SINGLE comment sign, when
 appropriate.
 
 #+BEGIN_SRC emacs-lisp :tangle yes :exports none
 ;; Customisation file for ANSYS-Mode (GNU-Linux and Windows)
-;; This file was created from a-m.org
+;; This file was created from A-M.org
 
 ;; Copyright (C) 2015 H. Dieter Wilhelm GPL V3
 
-;; `a-m.el' can be used as a configuration file (after moving
+;; `A-M.el' can be used as a configuration file (after moving
 ;; it e. g. to `/usr/share/emacs/site-lisp' or
 ;; `c:\\EMACS_INSTALLDIR\\site-lisp').  Yet this file is then loaded
 ;; AFTER Emacs' user configuration file `~/.emacs' (or `~/.emacs.el'
@@ -465,9 +465,10 @@ between flexlm and ANSYS WorkBench, 2325 is the default port.
   ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
   ;; adding the directory of this (loaded) file to the load-path
-  (message (concat "loading from " (file-name-directory load-file-name)))
+  (message (concat "loading A-M.el from " (file-name-directory load-file-name)))
   (add-to-list 'load-path (file-name-directory load-file-name))
   (require 'ansys-mode)
+  (message "Initialising defcustoms.")
   (ansys-initialise-defcustoms)
   (message "ANSYS-Mode enabled.")
 
