--- a/NEWS.org
+++ b/NEWS.org
@@ -19,7 +19,11 @@
 Copyright (C) 2006 - 2015  H. Dieter Wilhelm, GPL V3
 ** Version 16.1.2
    - Realised sending code to the ANYSClassics GUI as well.
+
    - Reorganised and simplified the installation and configuration.
+
+   - The command `C-c C-j' does now recognise blocks, which is to say
+     it copies or sends complete logical blocks
 
 ** Version 16.1.1 July 2015
    - The command `ansys-show-command-parameters' (M-?) does
