--- a/doc/A-M_introductory_tutorial.org
+++ b/doc/A-M_introductory_tutorial.org
@@ -1,4 +1,4 @@
-#+DATE: Time-stamp: <2015-07-09>
+#+DATE: Time-stamp: <2015-07-13>
 #+bind: org-html-preamble-format (("en" "%d"))
 # #+DATE: <2013-05-22 Wed>
 # #+OPTIONS: H:1 texht:t
@@ -13,7 +13,7 @@
 # #+LATEX_HEADER:
 # #+LATEX_HEADER_EXTRA:
 
-#+TITLE: *ANSYS-Mode* for GNU Emacs, an introductory *Tutorial* for version 16.1.1
+#+TITLE: *ANSYS-Mode* for GNU Emacs, an introductory *Tutorial* for version 16.1.2
 #+AUTHOR:    H. Dieter Wilhelm
 #+EMAIL:     dieter@duenenhof-wilhelm.de
 # #+DATE:      2012-06-17 Sa
@@ -331,14 +331,14 @@
 #   \\Mainly the ANSYS version and its installation directory
     The mode comes pre-configured for the default installation of
     ANSYS for Win64.  If something is amiss: Please adjust
-*** the well commented configuration file /a-m.el/
+*** the well commented configuration file /A-M.el/
 	  :PROPERTIES:
 	  :BEAMER_env: block
 	  :BEAMER_envargs: C[T]
 	  :BEAMER_col: 0.5
 	  :END:
 #+ATTR_LaTeX: :width 5.5cm
-  [[./default_el.png]]
+  [[./a-m_el.png]]
 
   ... and restart Emacs.
 *** or change the settings with Emacs' customisation system
